Fix typo in portfolio description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <h1>welcome to my portfolio</h1>
-  <p>EConometrics - Data Analysis - Causal inference</p>
+  <p>Econometrics - Data Analysis - Causal inference</p>
 </body>
 </html>
