Revamp index.html with new layout and sections

--- a/index.html
+++ b/index.html
@@ -1,10 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>My Econometrics Portfolio</title>
+<link rel="stylesheet" href="styles.css"> <!-- Link your CSS file -->
 </head>
 <body>
-  <h1>welcome to my portfolio</h1>
-  <p>Econometrics - Data Analysis - Causal inference</p>
+  <!-- Navigation Bar -->
+  <header>
+    <nav>
+      <div class="logo">Economist</div>
+      <ul class="nav-links">
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Hero Section -->
+  <section id="hero">
+    <h1>Welcome to My Econometrics Portfolio</h1>
+    <p>Econometrics | Data Analysis | Causal Inference</p>
+    <a href="#projects" class="cta-button">View My Work</a>
+  </section>
+
+  <!-- About Section -->
+  <section id="about">
+    <h2>About Me</h2>
+    <p>Brief professional bio goes here, highlighting key skills and interests in econometrics.</p>
+  </section>
+
+  <!-- Projects Section -->
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="project-grid">
+      <!-- Project 1 Card -->
+      <div class="project-card">
+        <h3>Project Title 1</h3>
+        <p>Description of an econometrics project (e.g., "Analyzing minimum wage effects using difference-in-differences").</p>
+        <a href="#">Learn More</a>
+      </div>
+      <!-- Project 2 Card -->
+      <div class="project-card">
+        <h3>Project Title 2</h3>
+        <p>Description of another project.</p>
+        <a href="#">Learn More</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact">
+    <h2>Get in Touch</h2>
+    <p>Email: [your.email@example.com](mailto:your.email@example.com)</p>
+    <p>LinkedIn: [linkedin.com](https://linkedin.com)</p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Your Name</p>
+  </footer>
+
 </body>
 </html>
