--- a/index.html
+++ b/index.html
@@ -1,66 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>My Econometrics Portfolio</title>
-<link rel="stylesheet" href="styles.css"> <!-- Link your CSS file -->
+  <meta charset="UTF-8">
+  <title>Econometric Analysis | Ali Madkhali</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&family=Source+Serif+Pro:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- Navigation Bar -->
-  <header>
-    <nav>
-      <div class="logo">Economist</div>
-      <ul class="nav-links">
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
 
-  <!-- Hero Section -->
-  <section id="hero">
-    <h1>Welcome to My Econometrics Portfolio</h1>
-    <p>Econometrics | Data Analysis | Causal Inference</p>
-    <a href="#projects" class="cta-button">View My Work</a>
-  </section>
-
-  <!-- About Section -->
-  <section id="about">
-    <h2>About Me</h2>
-    <p>Brief professional bio goes here, highlighting key skills and interests in econometrics.</p>
-  </section>
-
-  <!-- Projects Section -->
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="project-grid">
-      <!-- Project 1 Card -->
-      <div class="project-card">
-        <h3>Project Title 1</h3>
-        <p>Description of an econometrics project (e.g., "Analyzing minimum wage effects using difference-in-differences").</p>
-        <a href="#">Learn More</a>
-      </div>
-      <!-- Project 2 Card -->
-      <div class="project-card">
-        <h3>Project Title 2</h3>
-        <p>Description of another project.</p>
-        <a href="#">Learn More</a>
-      </div>
+<nav>
+  <div class="nav-container">
+    <a class="logo" href="#">Ali Madkhali</a>
+    <div class="links">
+      <a href="#projects">Projects</a>
+      <a href="#data">Data</a>
+      <a href="#cv">CV</a>
     </div>
-  </section>
+  </div>
+</nav>
 
-  <!-- Contact Section -->
-  <section id="contact">
-    <h2>Get in Touch</h2>
-    <p>Email: [your.email@example.com](mailto:your.email@example.com)</p>
-    <p>LinkedIn: [linkedin.com](https://linkedin.com)</p>
-  </section>
+<header class="hero">
+  <h1>Econometric Analysis</h1>
+  <p>Applied Methods • Causal Inference • Data-Driven Policy</p>
+  <div class="accent-line"></div>
+</header>
 
-  <footer>
-    <p>&copy; 2025 Your Name</p>
-  </footer>
+<section id="projects" class="content">
+  <h2>Projects</h2>
+
+  <div class="card-grid">
+    <div class="card">
+      <h3>Ethereum bubble detection: An application of Phillips-Shi-Yu Method</h3>
+      <p>Bubble detection in ethereum prices over the period between its release and up to 2025/12/31.</p>
+    </div>
+
+    <div class="card">
+      <h3>Time Series Work</h3>
+      <p>ARIMA forecasting, structural breaks, etc.</p>
+    </div>
+  </div>
+</section>
+
+<footer>
+  <div class="motif"></div>
+  <p>© 2025 Ali Madkhali</p>
+</footer>
 
 </body>
 </html>
