Revise header and navigation links in index.html
Updated navigation links and header content for better clarity.

--- a/index.html
+++ b/index.html
@@ -1,44 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Econometric Analysis | Ali Madkhali</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&family=Source+Serif+Pro:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
 <nav>
   <div class="nav-container">
-    <a class="logo" href="#">Ali Madkhali</a>
+    <a class="logo" href="index.html"><img src="assets/logo.svg" height="28"></a>
     <div class="links">
-      <a href="#projects">Projects</a>
-      <a href="#data">Data</a>
-      <a href="#cv">CV</a>
+      <a href="projects.html">Projects</a>
+      <a href="data.html">Data</a>
+      <a href="charts.html">Charts</a>
+      <a href="cv.html">CV</a>
     </div>
   </div>
 </nav>
 
 <header class="hero">
-  <h1>Econometric Analysis</h1>
-  <p>Applied Methods • Causal Inference • Data-Driven Policy</p>
+  <h1>Ali Madkhali</h1>
+  <p>Econometrics • Causal Inference • Applied Analytics</p>
   <div class="accent-line"></div>
 </header>
 
-<section id="projects" class="content">
-  <h2>Projects</h2>
-
-  <div class="card-grid">
-    <div class="card">
-      <h3>Ethereum bubble detection: An application of Phillips-Shi-Yu Method</h3>
-      <p>Bubble detection in ethereum prices over the period between its release and up to 2025/12/31.</p>
-    </div>
-
-    <div class="card">
-      <h3>Time Series Work</h3>
-      <p>ARIMA forecasting, structural breaks, etc.</p>
-    </div>
-  </div>
+<section class="content">
+  <h2>Welcome</h2>
+  <p>
+    I am an econometrics researcher focused on causal inference, policy analysis, 
+    and applied statistical modeling. This website showcases my work, datasets, 
+    and interactive econometric visualizations.
+  </p>
 </section>
 
 <footer>
